src/objects/GFent_Account_Penetration_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GFent Account Penetration Snapshot</label>
    <nameField>
        <label>GFent Account Penetration Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GFent Account Penetration Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>